[gd_scene load_steps=2 format=3 uid="uid://b8dbifwnhhigl"]

[ext_resource type="Script" uid="uid://c1rwqjvquyov8" path="res://scripts/level_graph/stage_node.gd" id="1_0h5ea"]

[node name="StageNode" type="GraphNode"]
custom_minimum_size = Vector2(0, 350)
offset_right = 600.0
offset_bottom = 350.0
mouse_filter = 1
title = "Stage Node"
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 1
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 1
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 1
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_0h5ea")

[node name="StageSelect" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="StageSelect"]
layout_mode = 2
text = "Stage:"

[node name="SceneOptions" type="OptionButton" parent="StageSelect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 30)
layout_mode = 2

[node name="ExitBoiler" type="HBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ExitNumber" type="Label" parent="ExitBoiler"]
custom_minimum_size = Vector2(23, 0)
layout_mode = 2
text = "1. "
horizontal_alignment = 2

[node name="ExitColor" type="ColorPickerButton" parent="ExitBoiler"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
color = Color(0.898039, 0.788235, 0.0941176, 1)
edit_alpha = false

[node name="Position" type="HBoxContainer" parent="ExitBoiler"]
custom_minimum_size = Vector2(176, 0)
layout_mode = 2

[node name="x" type="SpinBox" parent="ExitBoiler/Position"]
layout_mode = 2
rounded = true
alignment = 3
prefix = "x:"

[node name="y" type="SpinBox" parent="ExitBoiler/Position"]
layout_mode = 2
rounded = true
alignment = 3
prefix = "y:"

[node name="RemoveExitButton" type="Button" parent="ExitBoiler"]
layout_mode = 2
text = "Remove"

[node name="AddExitButton" type="Button" parent="."]
layout_mode = 2
text = "Add Exit"

[node name="TabContainer" type="TabContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
current_tab = 0

[node name="Enemies" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="EnemyBoiler" type="HBoxContainer" parent="TabContainer/Enemies"]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyNumber" type="Label" parent="TabContainer/Enemies/EnemyBoiler"]
custom_minimum_size = Vector2(23, 0)
layout_mode = 2
text = "1."
horizontal_alignment = 2

[node name="EnemySelect" type="OptionButton" parent="TabContainer/Enemies/EnemyBoiler"]
custom_minimum_size = Vector2(267, 0)
layout_mode = 2
fit_to_longest_item = false

[node name="Position" type="HBoxContainer" parent="TabContainer/Enemies/EnemyBoiler"]
custom_minimum_size = Vector2(176, 0)
layout_mode = 2

[node name="x" type="SpinBox" parent="TabContainer/Enemies/EnemyBoiler/Position"]
layout_mode = 2
rounded = true
alignment = 3
prefix = "x:"

[node name="y" type="SpinBox" parent="TabContainer/Enemies/EnemyBoiler/Position"]
layout_mode = 2
rounded = true
alignment = 3
prefix = "y:"

[node name="RemoveEnemyButton" type="Button" parent="TabContainer/Enemies/EnemyBoiler"]
layout_mode = 2
text = "Remove"

[node name="AddEnemyButton" type="Button" parent="TabContainer/Enemies"]
layout_mode = 2
text = "Add Enemy"

[node name="Pickups" type="GridContainer" parent="TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
columns = 3
metadata/_tab_index = 1

[node name="PickupBoiler" type="SpinBox" parent="TabContainer/Pickups"]
visible = false
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
max_value = 1000.0
rounded = true
allow_greater = true
alignment = 3
prefix = "Boiler:"

[connection signal="pressed" from="StageSelect/SceneOptions" to="." method="_on_scene_options_pressed"]
[connection signal="pressed" from="AddExitButton" to="." method="_on_add_exit_button_pressed"]
[connection signal="pressed" from="TabContainer/Enemies/AddEnemyButton" to="." method="_on_add_enemy_button_pressed"]
